--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ endif()
 ## POCO C++ Libraries ##
 ########################
 # We need at least 1.4.3 because of WebSocket support.
-find_package(Poco 1.4.3 REQUIRED COMPONENTS Foundation Net Util XML)
+find_package(Poco 1.4.3 REQUIRED COMPONENTS Foundation Net NetSSL Util XML)
 
 ###########
 ## Build ##
